# datarepr

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst  v1.1.rst  v1.2.rst
make/: toml_sorted_testdata.txt
src/datarepr/: __init__.py  core.py
src/datarepr/tests/: __init__.py  test_0.py  test_oxford.py  testdata.toml
