[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
description = "This project allows for common sense data representation."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "datarepr"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.2.2"

[project.urls]
Download = "https://pypi.org/project/datarepr/#files"
Index = "https://pypi.org/project/datarepr/"
Source = "https://github.com/johannes-programming/datarepr/"
Website = "https://datarepr.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = true
